srht/scss/base.scss
@import "bootstrap/scss/functions";
@import "bootstrap/scss/variables";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/root";
@import "bootstrap/scss/reboot";
@import "bootstrap/scss/code";
@import "bootstrap/scss/type";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/tables";
@import "bootstrap/scss/forms";
@import "bootstrap/scss/buttons";
@import "bootstrap/scss/transitions";
@import "bootstrap/scss/dropdown";
@import "bootstrap/scss/progress";
@import "bootstrap/scss/button-group";
@import "bootstrap/scss/input-group";
@import "bootstrap/scss/custom-forms";
@import "bootstrap/scss/nav";
@import "bootstrap/scss/navbar";
@import "bootstrap/scss/alert";
@import "bootstrap/scss/utilities";
@import "bootstrap/scss/print";

@import "icons";
@import "nav";

$base-font-size: 0.9rem;

body {
  font-family: sans-serif;
  font-size: $base-font-size;
  padding-bottom: 1rem;
}

p {
  margin-bottom: 0.5rem;
}

label {
  margin-bottom: 0.25rem;
}

input[type="text"],
input[type="email"],
input[type="password"],
textarea.form-control {
  border-radius: 0;
  border-color: #888;
  color: $gray-800;
  padding: 0.25rem 0.375rem;

  &:active, &:focus {
    color: $gray-800;
  }
}

input[type="checkbox"] {
  position: relative;
  top: 2px;
}

select.form-control {
  border-radius: 0;
  border-color: #888;
  color: $gray-800;
  padding: 0 0.75rem;
  height: 1.9rem !important;
}

form {
  margin-bottom: 1rem;
}

legend {
  font-size: $base-font-size;
  margin-bottom: 0;
}

h1, h2 {
  margin-top: 0;

  small {
    font-size: $base-font-size;
  }
}

h3 {
  font-size: 1.3rem;
  border-bottom: 1px solid $gray-200;
  padding-bottom: 0.25rem;

  small {
    @extend .text-muted;
    font-size: 1rem;
    margin-left: 1rem;
  }
}

h4 {
  font-size: 1.1rem;
  border-bottom: 1px solid $gray-200;
  padding-bottom: 0.25rem;

  small {
    @extend .text-muted;
    font-size: 0.8rem;
    margin-left: 1rem;
  }
}

h5 {
  font-size: 1rem;
  font-weight: bold;
}

.table {
  thead {
    th {
      padding: 0.1rem 0.75rem;
      border: none;
    }
  }

  tbody {
    td {
      position: relative;
      vertical-align: middle;
      padding: 0.1rem 0.75rem;
      border: 1px solid $gray-400;

      label {
        margin-bottom: 0;
      }
    }
  }

  tr.danger {
    background: lighten($danger, 20);
  }

  .btn-danger.btn-fill {
    background: lighten($danger, 5);

    &:hover {
      background: $danger;
    }
  }
}

section {
  padding-bottom: 0.5rem;
}

.container {
  margin: 0;

  @include media-breakpoint-down(md) {
    width: 100%;
    max-width: 100%;
  }
}

.btn {
  border-radius: 0;
  padding: 0.1rem 0.75rem;
  font-size: 0.9rem;

  &.btn-default {
    transition: background 0.1s linear;
    background: $gray-200;
    border: $gray-800 1px solid;
    color: black;

    &:hover {
      background: $gray-100;
    }
  }

  &.btn-primary {
    border: darken($primary, 40) 1px solid;
  }

  &.btn-success {
    border: darken($success, 30) 1px solid;
  }

  &.btn-info {
    border: darken($info, 30) 1px solid;
  }

  &.btn-danger {
    border: $border-color 1px solid;
  }

  &.btn-link {
    padding: 0;
    font-size: $base-font-size;
    margin-top: -0.1rem;
  }

  &.btn-fill {
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    border: none;
    padding: 0;
    line-height: 1.6;
  }
}

.navbar-light .navbar-nav {
  .nav-link:hover {
    color: $black;
  }
}

.nav-tabs {
  padding-left: 1rem;
  margin-bottom: 0.5rem;
  border-bottom: 3px #ddd solid;

  .nav-link {
    padding: 0 1rem;
    border-radius: 0;
    border: none;
    color: #777;
    cursor: pointer;

    &.active, &.active:hover {
      color: black;
      background: #ddd;
    }

    &[disabled], &[disabled]:hover {
      color: #888;
      cursor: not-allowed;
      background: transparent;
      padding-left: 0;
      padding-right: 0;
    }
  }
}

.alert {
  padding: 0.5rem;
  border-radius: 0;

  .form-group & {
    margin-top: 1rem;
  }
}

.text-centered {
  text-align: center;
}

.text-right {
  text-align: right;
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

blockquote {
  padding-left: 0.5rem;
  border-left: 3px solid #aaa;
}

pre {
  background: $gray-200;
  padding: 0.25rem;
}

code {
  margin: 0;
  background: transparent;
  color: black;
}

.event-list {
  .event {
    padding: 0.5rem;
    margin: 0.5rem 0;
    background: #f5f5f5;

    &:first-child {
      margin-top: 0;
    }

    &:last-child {
      margin-bottom: 0;
    }

    h4 {
      margin-bottom: 0;
      padding: 0;
    }

    blockquote {
      margin-bottom: 0.5rem;

      *:last-child {
        margin-bottom: 0;
      }
    }

    *:last-child {
      margin-bottom: 0;
    }
  }

  margin-bottom: 1rem;
}

